<resources>
    <string name="app_name">School Way</string>
    <string name="welcome">WELCOME</string>
    <string name="project_name">SchoolWay</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="show_password">Show Password</string>
    <string name="user_type">User Type</string>
    <string name="parent">Parent</string>
    <string name="bus_incharge">Bus Incharge</string>
    <string name="school_authority">School Authority</string>
    <string name="student">Student</string>
    <string name="bus">Bus</string>
    <string name="info">Info</string>
    <string name="sos">SOS</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="emergency_description">Emergency Description</string>
    <string name="serious">Serious</string>
    <string name="non_serious">Non Serious</string>
    <string name="send_sos">Send SOS</string>
    <string name="student_rollno">Student Rollno</string>
    <string name="bus_number">Bus Number</string>
    <string name="bus_incharge_name">Bus Incharge Name</string>
    <string name="search">Search</string>
    <string name="forgot_password">Forgot Password\n</string>
    <string name="role">Sign In As\n</string>
    <string name="first_name">Name\n</string>
    <string name="last_name">Surname\n</string>
    <string name="bus_staff_type">Bus Staff Type</string>
    <string name="driver">Driver</string>
    <string name="attendant">Attendant</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="ble_not_supported">Bluetooth Low Energy is not supported on this device</string>
    <string name="permissions_not_granted">Required permissions were not granted</string>
    <string name="bluetooth_not_enabled">Bluetooth is not enabled</string>
    <string name="cannot_access_scanner">Cannot access Bluetooth scanner</string>
    <string name="scanning_message">Scanning for devices…</string>
    <string name="scan_completed">Scan completed</string>
    <string name="esp32_gps_device_name">ESP32 GPS</string>
    <string name="connecting_to_device">Connecting to %s</string>
    <string name="connected_to_device">Connected to device</string>
    <string name="disconnected_from_device">Disconnected from device</string>
    <string name="last_update_format">Last update: %s</string>

    <string name="bluetooth_permission_required">Bluetooth permission is required</string>
    <string name="bluetooth_scan_permission_required">Bluetooth scan permission is required</string>
    <string name="bluetooth_connect_permission_required">Bluetooth connect permission is required</string>
</resources>