<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:layout_margin="80dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/poppins_family"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="35dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="168dp" android:layout_height="168dp"
                android:layout_marginBottom="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bus_icon"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_name"
                android:textSize="30dp"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:fontFamily="@font/poppins_family"
                android:textStyle="bold" /> </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1." />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/app_yellow"
            android:text="@string/sign_up"
            android:fontFamily="@font/poppins_family"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:cornerRadius="20dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/app_yellow"
            android:text="@string/sign_in"
            android:textSize="20dp"
            android:fontFamily="@font/poppins_family"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:cornerRadius="20dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>