<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    tools:context=".User_type">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="center"
            android:text="@string/user_type"
            android:fontFamily="@font/poppins_family"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.HeadlineMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/parent"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/app_yellow"
            android:text="@string/parent"
            android:textSize="20dp"
            android:fontFamily="@font/poppins_family"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:cornerRadius="20dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bus_incharge"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/app_yellow"
            android:text="@string/bus_incharge"
            android:textSize="20dp"
            android:fontFamily="@font/poppins_family"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:cornerRadius="20dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/school_authority"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/app_yellow"
            android:text="@string/school_authority"
            android:textSize="20dp"
            android:fontFamily="@font/poppins_family"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:cornerRadius="20dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>