<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    tools:context=".Sos">

    <TextView
        android:id="@+id/where_am_i"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_yellow"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/sos"
        android:fontFamily="@font/poppins_family"
        android:textStyle="bold"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/where_am_i"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.95">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/emergency_alert"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:fontFamily="@font/poppins_family"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Select Severity:"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:fontFamily="@font/poppins_family"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/severity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/serious"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/serious"
                    android:fontFamily="@font/poppins_family"
                    android:textColor="#ff0000" />

                <RadioButton
                    android:id="@+id/non_serious"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/non_serious"
                    android:fontFamily="@font/poppins_family"
                    android:textColor="#008000" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emergency_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emergency_description"
                    android:fontFamily="@font/poppins_family"
                    android:minLines="3"
                    android:gravity="top"
                    android:background="#306B6B6B"
                    android:inputType="textMultiLine|textCapSentences"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_sos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/app_yellow"
                android:text="@string/send_sos"
                android:fontFamily="@font/poppins_family"
                android:textStyle="bold"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:cornerRadius="8dp"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>